Added Many Actors. Still compiling in Play 3.0